@@ -1501,13 +1501,20 @@ begin
     if copy(UpperCase(Statement), 1, length(PStatNames^[s])) =
       UpperCase(PStatNames^[s]) then
     begin
+      // The found kind of statement is : PStatNames^[s]
       Result := s;
       test := copy(UpperCase(Statement), 1, length(PStatNames^[s]));
       test := UpperCase(PStatNames^[s]);
       if length(PStatNames^[s]) < length(Statement) then
-        SectionSpecifier := tsecIncluded
+      begin
+        // we found a statement with a trailing identier string  (e.g. sub_mysub)
+        SectionSpecifier := tsecIncluded;
+      end
       else
+      begin
+        // the found a statement is identic to the kind of Statement (e.g. sub)
         SectionSpecifier := tsecExpected;
+      end;
 
       //special hack for tsExecuteWith
       if Result = tsExecuteWith then
@@ -1630,9 +1637,8 @@ begin
           (VGUID1.D4[3] = VGUID2.D4[3]) and (VGUID1.D4[4] = VGUID2.D4[4]) and
           (VGUID1.D4[5] = VGUID2.D4[5]) and (VGUID1.D4[6] = VGUID2.D4[6]) and
           (VGUID1.D4[7] = VGUID2.D4[7]) then
-          Result := Format(CLSFormatMACMask,
-            [VGUID1.D4[2], VGUID1.D4[3], VGUID1.D4[4], VGUID1.D4[5],
-            VGUID1.D4[6], VGUID1.D4[7]]);
+          Result := Format(CLSFormatMACMask, [VGUID1.D4[2],
+            VGUID1.D4[3], VGUID1.D4[4], VGUID1.D4[5], VGUID1.D4[6], VGUID1.D4[7]]);
     end;
   finally
     UnloadLibrary(VLibHandle);
@@ -1999,10 +2005,12 @@ begin
     if (encodingString = '') and not isPlainAscii then
     begin
       if configSupressSystemEncodingWarning then
-        LogDatei.log('Warning : no encodingString or is empty - Fallback to system encoding',
+        LogDatei.log(
+          'Warning : no encodingString or is empty - Fallback to system encoding',
           LLInfo)
       else
-        LogDatei.log('Warning : no encodingString or is empty - Fallback to system encoding',
+        LogDatei.log(
+          'Warning : no encodingString or is empty - Fallback to system encoding',
           LLWarning);
       encodingString := 'system';
     end;
@@ -10462,8 +10470,8 @@ begin
 
     if pos('winst ', lowercase(BatchParameter)) > 0 then
     begin
-      winstparam := trim(copy(BatchParameter, pos('winst ',
-        lowercase(BatchParameter)) + 5, length(BatchParameter)));
+      winstparam := trim(copy(BatchParameter,
+        pos('winst ', lowercase(BatchParameter)) + 5, length(BatchParameter)));
       BatchParameter := trim(copy(BatchParameter, 0,
         pos('winst ', lowercase(BatchParameter)) - 1));
     end;
@@ -11951,10 +11959,10 @@ begin
 
           localKindOfStatement := findKindOfStatement(s2, SecSpec, s1);
 
-          if not (localKindOfStatement in [tsDOSBatchFile,
-            tsDOSInAnIcon, tsShellBatchFile, tsShellInAnIcon,
-            tsExecutePython, tsExecuteWith, tsExecuteWith_escapingStrings,
-            tsWinBatch]) then
+          if not (localKindOfStatement in
+            [tsDOSBatchFile, tsDOSInAnIcon, tsShellBatchFile,
+            tsShellInAnIcon, tsExecutePython, tsExecuteWith,
+            tsExecuteWith_escapingStrings, tsWinBatch]) then
             InfoSyntaxError := 'not implemented for this kind of section'
           else
           begin
@@ -20619,18 +20627,22 @@ begin
                   if CheckFileExists(fullfilename, ErrorInfo) then
                   begin
                     detectedEncoding := '';
-                    hasBom := getFileBom(fullfilename, detectedEncoding);
-                    //// we expect external sub encoding to be system
-                    //if detectedEncoding = '' then
-                    //  detectedEncoding := 'system';
+                    try
+                      hasBom := getFileBom(fullfilename, detectedEncoding);
+                    except
+                      Logdatei.log('tsecExpected: getFileBom: File "' +
+                        fullfilename + '" cannot be read', LLCritical);
+                      FExtremeErrorLevel := levelFatal;
+                    end;
                     try
                       LoadValidLinesFromFile(fullfilename, detectedEncoding,
                         ArbeitsSektion);
 
                       ArbeitsSektion.StartLineNo := 1;
                     except
-                      Logdatei.log('File "' + fullfilename +
-                        '" cannot be read', LLError);
+                      Logdatei.log('tsecExpected: LoadValidLinesFromFile: File "' +
+                        fullfilename + '" cannot be read', LLCritical);
+                      FExtremeErrorLevel := levelFatal;
                     end;
                   end
                   else
@@ -21218,7 +21230,8 @@ begin
                       end;
                       //closeFile(incfile);
                       linecount := Count;
-                      FreeAndNil(inclist);
+                      // free inclist later - we need it at 'Imported all functions'
+                      //FreeAndNil(inclist);
 
                       for tmpint := 0 to 3 do
                       begin
@@ -21247,15 +21260,18 @@ begin
                       begin
                         LogDatei.log('Imported all functions from file: ' +
                           fullincfilename, LLNotice);
-                        tmplist := TXstringlist.Create;
-                        tmplist.LoadFromFile(fullincfilename);
-                        script.registerSectionOrigins(tmplist, fullincfilename);
-                        tmplist.Free;
+                        script.registerSectionOrigins(inclist, fullincfilename);
+                        // we reuse inclist here to avoid to open the file again
+                        //tmplist := TXstringlist.Create;
+                        //tmplist.LoadFromFile(fullincfilename);
+                        //script.registerSectionOrigins(tmplist, fullincfilename);
+                        //tmplist.Free;
                       end
                       else
                         LogDatei.log('Imported function : ' +
                           importFunctionName + ' from file: ' +
                           fullincfilename, LLNotice);
+                      FreeAndNil(inclist);
                       //for j:= 0 to sektion.Count -1 do
                       //  logdatei.log_prog('script: '+sektion.Strings[j],LLDebug);
                     end
@@ -21595,10 +21611,10 @@ begin
                         on E: Exception do
                         begin
                           Logdatei.log('Include_Append "' +
-                            Fname + '"', LLCritical);
+                            Fname + '"', LLwarning);
                           Logdatei.log(e.ClassName +
                             ': Failed getFileBom, system message: "' +
-                            E.Message + '"',
+                            E.Message + '" - will retry',
                             LLwarning);
                           Sleep(200);
                           try
@@ -21608,10 +21624,10 @@ begin
                             on E: Exception do
                             begin
                               Logdatei.log('Include_Append Retry1"' +
-                                Fname + '"', LLCritical);
+                                Fname + '"', LLwarning);
                               Logdatei.log(e.ClassName +
                                 ': Failed getFileBom, system message: "' +
-                                E.Message + '"',
+                                E.Message + '" - will retry',
                                 LLwarning);
                               Sleep(200);
                               try
@@ -21624,7 +21640,7 @@ begin
                                     Fname + '"', LLCritical);
                                   Logdatei.log(e.ClassName +
                                     ': Failed getFileBom, system message: "' +
-                                    E.Message + '"',
+                                    E.Message + '" - giving up',
                                     LLCritical);
                                   FExtremeErrorLevel := levelFatal;
                                   RaiseLastOSError;
